--- a/conf/app.ini
+++ b/conf/app.ini
@@ -3,3 +3,17 @@ Name = blog_go
 mode = local
 Debug = true
 Port = 8888
+
+[Model]
+# username:password@tcp(host:port)/database?charset=utf8mb4&parseTime=True&loc=Local
+Connection = mysql
+Host = 47.107.98.98
+Port = 3306
+Database = blog_go
+Username = root
+Password = 941025
+Args = ?charset=utf8mb4&parseTime=True&loc=Local
+Prefix = blog_
+# db2struct
+# go get github.com/Shelnutt2/db2struct/cmd/db2struct
+# db2struct --host 47.107.98.98 -d blog_go -t blog_article --package model --struct Article -p 941025 --user root --guregu --gorm
