--- a/conf/app.ini
+++ b/conf/app.ini
@@ -3,6 +3,7 @@ Name = blog_go
 mode = local
 Debug = true
 Port = 8888
+MaxMultipartMemory = 3
 
 [Model]
 # username:password@tcp(host:port)/database?charset=utf8mb4&parseTime=True&loc=Local
