--- a/conf/config_example.ini
+++ b/conf/config_example.ini
@@ -1,20 +1,22 @@
 [App]
-Name = blog_go
+Name =
 mode = local
 Debug = true
-Port = 8888
+Port =
 MaxMultipartMemory = 3
+JwtIssuer =
+SigningKey =
 
 [Model]
 # username:password@tcp(host:port)/database?charset=utf8mb4&parseTime=True&loc=Local
 Connection = mysql
-Host = 47.107.98.98
-Port = 3306
-Database = blog_go
-Username = root
-Password = 941025
+Host =
+Port =
+Database =
+Username =
+Password =
 Args = ?charset=utf8mb4&parseTime=True&loc=Local
-Prefix = blog_
+Prefix =
 # db2struct
 # go get github.com/Shelnutt2/db2struct/cmd/db2struct
-# db2struct --host 47.107.98.98 -d blog_go -t blog_article --package model --struct Article -p 941025 --user root --guregu --gorm
+# db2struct --host 127.0.0.1 -d blog_go -t blog_article --package model --struct Article -p 123456 --user root --guregu --gorm
