--- a/conf/app.example.ini
+++ b/conf/app.example.ini
@@ -20,3 +20,9 @@ Prefix =
 # db2struct
 # go get github.com/Shelnutt2/db2struct/cmd/db2struct
 # db2struct --host 127.0.0.1 -d blog_go -t blog_article --package model --struct Article -p 123456 --user root --guregu --gorm
+
+[Redis]
+Addr =
+Password =
+Db = 0
+PoolSize = 5
