edit log config

--- a/conf/app.example.ini
+++ b/conf/app.example.ini
@@ -26,3 +26,11 @@ Addr =
 Password =
 Db = 0
 PoolSize = 5
+
+[Log]
+Runtime = runtime
+LogPath = log
+LogFileName = service.log
+MaxSize = 100
+MaxOldLogAge = 0
+MaxOldLogCount = 0
