--- a/conf/app.example.ini
+++ b/conf/app.example.ini
@@ -34,3 +34,9 @@ LogFileName = service.log
 MaxSize = 100
 MaxOldLogAge = 0
 MaxOldLogCount = 0
+
+[Upload]
+SavePath = upload
+SaveImagePath = images
+ImageAllowExt = .jpg,.jpeg,.png,.gif
+ImageMaxSize = 2
