--- a/conf/app.example.ini
+++ b/conf/app.example.ini
@@ -6,6 +6,8 @@ Port =
 MaxMultipartMemory = 3
 JwtIssuer =
 SigningKey =
+DomainUrl =
+ImageUrl =
 
 [Model]
 # username:password@tcp(host:port)/database?charset=utf8mb4&parseTime=True&loc=Local
